--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dropify": "^0.2.2",
     "lf-ng-md-file-input": "^1.5.3",
-    "ng-dropzone": "ngdropzone#^2.0.2"
+    "ng-dropzone": "ngdropzone#^2.0.2",
+    "ng-file-upload": "^12.2.13"
   }
 }
