--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "dropify": "^0.2.2",
     "lf-ng-md-file-input": "^1.5.3",
     "ng-dropzone": "ngdropzone#^2.0.2",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-tooltips": "^1.2.2"
   }
 }
