--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -6,11 +6,11 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-#spring.datasource.url = jdbc:mysql://localhost:3306/testdb?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/testdb?useSSL=false
 
 # Username and password
-#spring.datasource.username = root
-#spring.datasource.password = root
+spring.datasource.username = root
+spring.datasource.password = root
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -29,13 +29,13 @@ spring.datasource.validationQuery = SELECT 1
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
 spring.http.multipart.max-file-size=10MB
@@ -44,9 +44,13 @@ spring.http.multipart.max-request-size=10MB
 #server.tomcat.remote_ip_header=x-forwarded-for
 #server.tomcat.protocol_header=x-forwarded-proto
 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
+
+com.cloudinary.cloud_name=difpyd4yp
+com.cloudinary.api_key=713193419943958
+com.cloudinary.api_secret=CPTrb8-lRm9fuZyO3LKq1dZdrRE
