--- a/pom.xml
+++ b/pom.xml
@@ -130,11 +130,11 @@
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.4.2</version>
 		</dependency>
-		<dependency>
-			<groupId>com.github.vbauer</groupId>
-			<artifactId>herald</artifactId>
-			<version>1.2.3</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.github.vbauer</groupId>-->
+			<!--<artifactId>herald</artifactId>-->
+			<!--<version>1.2.3</version>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
